--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -1,2 +1,30 @@
 #UNICODE à: \u00e0, ç: \u00e7, é: \u00e9, è \u00e8, ê: \u00ea, ù: \u00f9, û: \u00fb
 paymentMethod.name = SCTI_EquensWordline
+
+contract.channelType.label=Type de canal
+contract.channelType.description=Type de canal de paiement
+contract.channelType.requiredError=Le type de canal est obligatoire
+
+contract.chargeBearer.label=Charge bearer
+contract.chargeBearer.description=Charge bearer
+contract.chargeBearer.requiredError=Le "charge bearer" est obligatoire
+
+contract.clientName.label=ClientName
+contract.clientName.description=Nom du client, vis-à-vis des APIs partenaire
+contract.clientName.requiredError=Le nom du client est obligatoire
+
+contract.merchantIban.label=IBAN
+contract.merchantIban.description=IBAN du marchand (compte créditeur)
+contract.merchantIban.requiredError=L'IBAN du marchand est obligatoire
+
+contract.onboardingId.label=ID Onboarding
+contract.onboardingId.description=Identifiant marchand fourni par le partenaire
+contract.onboardingId.requiredError=L'ID Onboarding est obligatoire
+
+contract.purposeCode.label=Purpose code
+contract.purposeCode.description=Purpose Code
+contract.purposeCode.requiredError=Le "purpose code" est obligatoire
+
+contract.scaMethod.label=Méthode SCA
+contract.scaMethod.description=Méthode utilisée pour l'authentification forte du client (Strong Customer Authentication)
+contract.scaMethod.requiredError=La méthode SCA est obligatoire
