Implémentation de PaymentFormConfigurationServiceImpl

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -27,3 +27,6 @@ contract.purposeCode.requiredError=
 contract.scaMethod.label=
 contract.scaMethod.description=
 contract.scaMethod.requiredError=
+
+paymentForm.buttonText=
+paymentForm.description= 
