--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -28,3 +28,6 @@ contract.purposeCode.requiredError=Le "purpose code" est obligatoire
 contract.scaMethod.label=Méthode SCA
 contract.scaMethod.description=Méthode utilisée pour l'authentification forte du client (Strong Customer Authentication)
 contract.scaMethod.requiredError=La méthode SCA est obligatoire
+
+paymentForm.buttonText=Payer avec Equens Worldline
+paymentForm.description=Choisissez votre banque
