--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -17,6 +17,10 @@ contract.merchantIban.label=IBAN
 contract.merchantIban.description=IBAN du marchand (compte créditeur)
 contract.merchantIban.requiredError=L'IBAN du marchand est obligatoire
 
+contract.merchantName.label=Nom du marchand
+contract.merchantName.description=Nom du marchand qui sera utilisé dans le champ CreditorName lors de l'initialisation des paiements
+contract.merchantName.requiredError=Le nom du marchand est obligatoire
+
 contract.onboardingId.label=ID Onboarding
 contract.onboardingId.description=Identifiant marchand fourni par le partenaire
 contract.onboardingId.requiredError=L'ID Onboarding est obligatoire
