--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -16,6 +16,10 @@ contract.merchantIban.label=
 contract.merchantIban.description=
 contract.merchantIban.requiredError=
 
+contract.merchantName.label=
+contract.merchantName.description=
+contract.merchantName.requiredError=
+
 contract.onboardingId.label=
 contract.onboardingId.description=
 contract.onboardingId.requiredError=
