Encodage des caractères accentués dans le fichier messages_fr.properties

--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -10,15 +10,15 @@ contract.chargeBearer.description=Charge bearer
 contract.chargeBearer.requiredError=Le "charge bearer" est obligatoire
 
 contract.clientName.label=ClientName
-contract.clientName.description=Nom du client, vis-à-vis des APIs partenaire
+contract.clientName.description=Nom du client, vis-\u00e0-vis des APIs partenaire
 contract.clientName.requiredError=Le nom du client est obligatoire
 
 contract.merchantIban.label=IBAN
-contract.merchantIban.description=IBAN du marchand (compte créditeur)
+contract.merchantIban.description=IBAN du marchand (compte cr\u00e9diteur)
 contract.merchantIban.requiredError=L'IBAN du marchand est obligatoire
 
 contract.merchantName.label=Nom du marchand
-contract.merchantName.description=Nom du marchand qui sera utilisé dans le champ CreditorName lors de l'initialisation des paiements
+contract.merchantName.description=Nom du marchand qui sera utilis\u00e9 dans le champ CreditorName lors de l'initialisation des paiements
 contract.merchantName.requiredError=Le nom du marchand est obligatoire
 
 contract.onboardingId.label=ID Onboarding
@@ -29,9 +29,9 @@ contract.purposeCode.label=Purpose code
 contract.purposeCode.description=Purpose Code
 contract.purposeCode.requiredError=Le "purpose code" est obligatoire
 
-contract.scaMethod.label=Méthode SCA
-contract.scaMethod.description=Méthode utilisée pour l'authentification forte du client (Strong Customer Authentication)
-contract.scaMethod.requiredError=La méthode SCA est obligatoire
+contract.scaMethod.label=M\u00e9thode SCA
+contract.scaMethod.description=M\u00e9thode utilis\u00e9e pour l'authentification forte du client (Strong Customer Authentication)
+contract.scaMethod.requiredError=La m\u00e9thode SCA est obligatoire
 
 paymentForm.buttonText=Payer avec Equens Worldline
 paymentForm.description=Choisissez votre banque
