Correction du nom du moyen de paiement dans les fichiers de messages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,4 @@
-paymentMethod.name = SCTI_EquensWordline
+paymentMethod.name = SCTI_EQUENS
 
 contract.channelType.label=
 contract.channelType.description=
