--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,4 +1,4 @@
-paymentMethod.name = SCTI_EquensWordline
+paymentMethod.name = SCTI_EQUENS
 
 contract.channelType.label=
 contract.channelType.description=
