--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -1,5 +1,5 @@
 #UNICODE à: \u00e0, ç: \u00e7, é: \u00e9, è \u00e8, ê: \u00ea, ù: \u00f9, û: \u00fb
-paymentMethod.name = SCTI_EquensWordline
+paymentMethod.name = SCTI_EQUENS
 
 contract.channelType.label=Type de canal
 contract.channelType.description=Type de canal de paiement
