Modification du libellé 'Payer avec...'

--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -33,5 +33,5 @@ contract.scaMethod.label=M\u00e9thode SCA
 contract.scaMethod.description=M\u00e9thode utilis\u00e9e pour l'authentification forte du client (Strong Customer Authentication)
 contract.scaMethod.requiredError=La m\u00e9thode SCA est obligatoire
 
-paymentForm.buttonText=Payer avec Equens Worldline
+paymentForm.buttonText=Payer avec InstantPayment
 paymentForm.description=Choisissez votre banque
