PAYLAPMEXT-237&239 : Modification du paymentForm.description

--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -34,4 +34,4 @@ contract.scaMethod.description=M\u00e9thode utilis\u00e9e pour l'authentificatio
 contract.scaMethod.requiredError=La m\u00e9thode SCA est obligatoire
 
 paymentForm.buttonText=Payer avec InstantPayment
-paymentForm.description=Choisissez votre banque
+paymentForm.description=Payer par virement
