rajout de la gestion l'iban lors d'un paiement & gestion de l'espagne

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -32,5 +32,11 @@ contract.scaMethod.label=
 contract.scaMethod.description=
 contract.scaMethod.requiredError=
 
+contract.countries.label=
+contract.countries.description=
+contract.countries.requiredError=
+
+countryCode.all=
+
 paymentForm.buttonText=
 paymentForm.description=
