corrections suite a la relecture

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -36,6 +36,8 @@ contract.countries.label=
 contract.countries.description=
 contract.countries.requiredError=
 
+countryCode.fr=
+countryCode.es=
 countryCode.all=
 
 paymentForm.buttonText=
