--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -37,6 +37,8 @@ contract.countries.label=Code Pays accept\u00e9 par le commer\u00e7ant
 contract.countries.description=Code Pays accept\u00e9 par le commer\u00e7ant
 contract.countries.requiredError=Au moins un code pays est obligatoire
 
+countryCode.fr=FRANCE
+countryCode.es=ESPAGNE
 countryCode.all=TOUS
 
 paymentForm.buttonText=Payer avec InstantPayment
