--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -32,5 +32,13 @@ contract.scaMethod.label=
 contract.scaMethod.description=
 contract.scaMethod.requiredError=
 
+contract.countries.label=
+contract.countries.description=
+contract.countries.requiredError=
+
+countryCode.fr=
+countryCode.es=
+countryCode.all=
+
 paymentForm.buttonText=
-paymentForm.description= 
+paymentForm.description=
