--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -37,6 +37,11 @@ contract.countries.label=Code Pays accept\u00e9 par le commer\u00e7ant
 contract.countries.description=Code Pays accept\u00e9 par le commer\u00e7ant
 contract.countries.requiredError=Au moins un code pays est obligatoire
 
+contract.pisp.label=R\u00e9f\u00e9rence contrat PISP Market Pay
+contract.pisp.description=
+contract.pisp.requiredError=Veuillez renseigner la r\u00e9f\u00e9rence contrat PISP
+contract.pisp.badFormat=la r\u00e9f\u00e9rence contrat PISP doit contenir uniquement 12 chiffres
+
 countryCode.fr=FRANCE
 countryCode.es=ESPAGNE
 countryCode.all=TOUS
