--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -36,6 +36,11 @@ contract.countries.label=
 contract.countries.description=
 contract.countries.requiredError=
 
+contract.pisp.label=
+contract.pisp.description=
+contract.pisp.requiredError=
+contract.pisp.badFormat=
+
 countryCode.fr=
 countryCode.es=
 countryCode.all=
