PAYLAPMEXT-299: Iban Dynamique & séparations des Constants

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -45,5 +45,11 @@ countryCode.fr=
 countryCode.es=
 countryCode.all=
 
-paymentForm.buttonText=
-paymentForm.description=
+paymentForm.bank.buttonText=
+paymentForm.bank.description=
+paymentForm.bank.inputField.label=
+paymentForm.bank.inputField.placeHolder=
+paymentForm.bank.inputField.requiredErrorMessage=
+paymentForm.bank.inputField.validationErrorMessage=
+paymentForm.iban.buttonText=
+paymentForm.iban.description=
