--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -46,5 +46,11 @@ countryCode.fr=FRANCE
 countryCode.es=ESPAGNE
 countryCode.all=TOUS
 
-paymentForm.buttonText=Payer avec InstantPayment
-paymentForm.description=Payer par virement
+paymentForm.bank.buttonText=Payer avec InstantPayment
+paymentForm.bank.description=Payer par virement
+paymentForm.bank.inputField.label=Veuillez choisir une banque
+paymentForm.bank.inputField.placeHolder=banque
+paymentForm.bank.inputField.requiredErrorMessage=Il faut choisir une banque
+paymentForm.bank.inputField.validationErrorMessage=Il faut choisir une banque valide
+paymentForm.iban.buttonText=Valider IBAN
+paymentForm.iban.description=Ajouter un IBAN
